<resources>
    <string name="app_name">FefuExample</string>

    <string name="barrier_description">Барьеры помогают избежать\nналожения элементов</string>

    <string name="title_main_activity">Главная активность</string>

    <string name="title_second_activity">Вторая активность</string>
    <string name="label_second_activity">Вторая активность содержит разметку с красивой кастомной кнопкой</string>
    <string name="action_second_activity">Открыть кнопку</string>

    <string name="title_fragment_activity">Третья активность</string>
    <string name="label_fragment_activity">Третья активность содержит два фрагмента с надписями</string>
    <string name="action_fragment_activity">Открыть фрагменты</string>
    <string name="hello_left_fragment">Hello left fragment!</string>
    <string name="hello_right_fragment">Hello right fragment!</string>

    <string name="label_call_intent">Неявный Intent со звонком</string>
    <string name="action_call_intent">Позвонить в фефу</string>

    <string name="title_activity_list">Список</string>
    <string name="label_list">Стандартный список строк</string>
    <string name="action_list">Открыть список</string>

    <string name="title_grid_activity">Таблица</string>
    <string name="label_grid">Таблица с кастомынми элементами</string>
    <string name="action_grid">Открыть таблицу</string>

    <string-array name="label_list_values_strings">
        <item>Раз</item>
        <item>Два</item>
        <item>Три</item>
        <item>Раз</item>
        <item>Два</item>
        <item>Три</item>
        <item>Раз</item>
        <item>Два</item>
        <item>Три</item>
        <item>Раз</item>
        <item>Два</item>
        <item>Три</item>
        <item>Раз</item>
        <item>Два</item>
        <item>Три</item>
        <item>Раз</item>
        <item>Два</item>
        <item>Три</item>
        <item>Раз</item>
        <item>Два</item>
        <item>Три</item>
    </string-array>

    <string name="title_epoxy">EpoxyRecyclerView</string>
    <string name="label_epoxy">Надстройка над RecyclerView</string>
    <string name="action_epoxy">Открыть Epoxy</string>


</resources>