<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/BaseToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_main_activity" />

    <TextView
        android:id="@+id/tvSecondActivityDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin_horizontal"
        android:layout_marginVertical="@dimen/default_margin_vertical"
        android:text="@string/label_second_activity"
        android:textAlignment="center"
        android:textColor="@color/colorDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Button
        android:id="@+id/btnSecondActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_margin_vertical"
        android:backgroundTint="@color/colorRipple"
        android:text="@string/action_second_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSecondActivityDescription" />

    <TextView
        android:id="@+id/tvFragmentActivityDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin_horizontal"
        android:layout_marginVertical="@dimen/default_margin_vertical"
        android:text="@string/label_fragment_activity"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSecondActivity" />

    <Button
        android:id="@+id/btnFragmentActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_margin_vertical"
        android:backgroundTint="@color/colorRipple"
        android:text="@string/action_fragment_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFragmentActivityDescription" />

    <TextView
        android:id="@+id/tvCallIntent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin_horizontal"
        android:layout_marginVertical="@dimen/default_margin_vertical"
        android:text="@string/label_call_intent"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFragmentActivity" />

    <Button
        android:id="@+id/btnCallIntent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_margin_vertical"
        android:backgroundTint="@color/colorRipple"
        android:text="@string/action_call_intent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCallIntent" />

</androidx.constraintlayout.widget.ConstraintLayout>